@@ -86,4 +86,37 @@ namespace simuPOP
 		return true;
 	}
 
+	bool pyTagger::applyDuringMating(population& pop, population::IndIterator offspring,
+				individual* dad, individual* mom)
+	{
+		UINT numFields = infoSize();
+		
+		vectoru idx(numFields);
+		for(size_t i=0; i<numFields; ++i)
+			idx[i] = pop.infoIdx(infoField(i));
+			
+		vectorf values;
+		if (dad != NULL)
+		{
+			for(size_t i=0; i<numFields; ++i)
+				values.push_back(dad->info(idx[i]));
+		}
+		if (mom != NULL)
+		{
+			for(size_t i=0; i<numFields; ++i)
+				values.push_back(mom->info(idx[i]));
+		}
+		//
+		vectorf res;
+		PyCallFunc(m_func, "(O)", Double_Vec_As_NumArray(values.begin(), values.end()),
+			res, PyObj_As_Array);
+
+		DBG_FAILIF(res.size() != numFields, ValueError, "Please return a value for each information field");
+		
+		// assign return values to offspring
+		for(size_t i=0; i<numFields; ++i)
+			offspring->setInfo(res[i], idx[i]);
+		return true;
+	}
+
 }
